how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -50,7 +50,7 @@
 	<div class="three">
 		<h4>Spread the Love</h4>
 		<img src="images/step3.png" /> 
-		<p>Invite your best friends and only those you want in our community. You decide who gets access to Rooja. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
+		<p>Invite your best friends and only those you want in our community. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
 		</p>
 	</div>
 
