how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -32,7 +32,7 @@
  */
 ?>
 <div class="howitworks">
-	<h2>How it works</h2>
+	<h2 class="white">How it works</h2>
 	<div class="hiw1-2">
 		<div class="one">
 			<h4>Browse</h4>
