--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -247,7 +247,14 @@ ul#myAccount li ul li a:hover{
 .three {float:right; width: 31%; padding: 0 10px; background:#a85705;}
 
 .howitworks p.hiw-header {border: none;}
-.white {color: white;}
+h2.white {
+	color: white; 
+	font-size: 2.4em;
+	line-height: 1em;
+	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;
+	font-weight: normal;
+	text-transform:uppercase;
+	}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
