--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -32,7 +32,7 @@
  */
 ?>
 <div class="howitworks">
-	<h2 class="white">How it works</h2>
+	<p class="hiw-header">How it works</p>
 	<div class="hiw1-2">
 		<div class="one">
 			<h4>Browse</h4>
