--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -239,7 +239,8 @@ ul#myAccount li ul li a:hover{
 
 
 /* HOW IT WORKS OVERLAY */
-.howitworks {width:980px; color: #fff; background: #000; }
+.hiw-container {background: url(../images/bgs/black-diag.png) repeat;height:262px; width:100%;}
+.howitworks {width:980px; color: #fff; }
 .howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.hiw1-2 {float:left; width: 66%;}
 		.one {float:left; width: 46%; padding: 0 10px;background:#a85705;}
@@ -255,6 +256,7 @@ p.hiw-header {
 	font-weight: normal;
 	text-transform:uppercase;
 	}
+a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; color: white; background: black; font-size:14px;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
