--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -239,7 +239,7 @@ ul#myAccount li ul li a:hover{
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/black-diag.png) repeat;height:262px; width:100%;}
+.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:262px; width:100%;}
 .howitworks {width:980px; color: #fff; }
 .howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.hiw1-2 {float:left; width: 66%;}
@@ -256,7 +256,7 @@ p.hiw-header {
 	font-weight: normal;
 	text-transform:uppercase;
 	}
-a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; color: white; background: black; font-size:14px;}
+a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; color: white; background: black; font-size:14px; margin: 0 auto;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
