how it works overlay

--- a/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/homepage.phtml
@@ -32,6 +32,9 @@
  */
 ?>
 
+</div>
+</section>
+</div>			
 <div class="hiw-container">
 	<div class="howitworks">
 		<p class="hiw-header">How it works</p>
@@ -58,7 +61,10 @@
 
 	<a href="#" class="closer">Close</a>
 	</div>
-
+<div id="mainContentWrap"> 
+	<section id="liveSales"> 
+		<div class="container"> 
+			<div class="std"><p>
 <?php 
 $i = 0;
 $categories = Mage::helper('catalog/category')->getStoreCategories();
