--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -256,7 +256,7 @@ p.hiw-header {
 	font-weight: normal;
 	text-transform:uppercase;
 	}
-a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; color: white; background: black; font-size:14px; margin: 0 auto;}
+a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; color: white; background: black; font-size:14px; margin: 0 auto; padding: 5px 10px;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
