--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -52,6 +52,35 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
     <?php echo $this->getChildHtml('global_notices') ?>
         <?php echo $this->getChildHtml('header') ?>
 
+			<div class="hiw-container">
+				<div class="howitworks">
+					<p class="hiw-header">How it works</p>
+					<div class="hiw1-2">
+						<div class="one">
+							<h4>Browse</h4>
+							<img src="images/step1.png" /> 
+							<p>Events held on Rooja are for members only and last typically between 2 to 3 days. Each event is held only for the stated period - once ended, it is gone for good.</p>
+						</div>
+
+						<div class="two">
+							<h4>Shop</h4>
+							<img src="images/step2.png" /> 
+							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis.</p>
+						</div>
+					</div>
+
+					<div class="three">
+						<h4>Spread the Love</h4>
+						<img src="images/step3.png" /> 
+						<p>Invite your best friends and only those you want in our community. Invite a friend and get shopping credits when your friend joins and makes their first purchase.
+						</p>
+					</div>
+
+				<a href="#" class="closer">Close</a>
+				</div>
+
+
+
 <section id="liveSales">
 	<div class="container">
 		<?php echo $this->getChildHtml('content') ?>
