--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -239,7 +239,7 @@ ul#myAccount li ul li a:hover{
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:262px; width:100%;}
+.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:262px; width:100%; margin: 0 auto;}
 .howitworks {width:980px; color: #fff; }
 .howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.hiw1-2 {float:left; width: 66%;}
