how it works overlay

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -79,6 +79,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 				<a href="#" class="closer">Close</a>
 				</div>
 				</div>
+				</div>
 
 
 
