how it works overlay

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -76,7 +76,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
 						</p>
 					</div>
 
-				<a href="#" class="closer">Close</a>
+				<div class="closer"><a href="#" class="closer">Close</a></div>
 				</div>
 				</div>
 
