--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -240,7 +240,7 @@ ul#myAccount li ul li a:hover{
 
 /* HOW IT WORKS OVERLAY */
 .hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:160px; width:100%; padding: 30px 0;}
-.howitworks {width:980px; color: #fff; margin: 0 auto;}
+.howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.hiw1-2 {float:left; width: 66%;}
 		.one {float:left; width: 46%; padding: 0 10px;background:#a85705;}
@@ -256,7 +256,15 @@ p.hiw-header {
 	font-weight: normal;
 	text-transform:uppercase;
 	}
-a.closer {	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; background: black; font-size:18px; padding: 5px 10px;}
+	
+.closer {width:100%;}	
+a.closer {	
+	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; 
+	background: black; 
+	font-size:18px; 
+	padding: 5px 10px;
+	color: #fff;
+	margin: 20px 0 0 -200px;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
