--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -257,14 +257,16 @@ p.hiw-header {
 	text-transform:uppercase;
 	}
 	
-.closer {width:100%;}	
+.closer {width:100%; 
+	overflow: hidden;
+	padding: 20px 0;}	
 a.closer {	
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; 
 	background: black; 
 	font-size:18px; 
 	padding: 5px 10px;
 	color: #fff;
-	margin: 20px 0 0 -200px;}
+	margin-left: 50%;}
 
 .staticContent{margin:30px 0 30px;overflow:hidden;}
 .staticContent h1{margin-bottom:20px;}
