--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -239,7 +239,7 @@ ul#myAccount li ul li a:hover{
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:160px; width:100%; padding: 30px 0;}
+.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:260px; width:100%; padding: 30px 0;}
 .howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
 	.hiw1-2 {float:left; width: 66%;}
@@ -265,9 +265,9 @@ p.hiw-header {
 	}	
 a.closer {	
 	font-family: "ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif; 
-	background: black url("../images/icons/arrow-nav-white.png") no-repeat right 8px;
+	background: black url("../images/icons/arrow-nav-white.png") no-repeat 60px 11px;
 	font-size:18px; 
-	padding: 5px 10px;
+	padding: 5px 29px 5px 10px;
 	color: #fff;
 	margin-left: 50%;}
 
