--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -241,7 +241,7 @@ ul#myAccount li ul li a:hover{
 /* HOW IT WORKS OVERLAY */
 .hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:260px; width:100%; padding: 30px 0;}
 .howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
-.howitworks img {float:left; display: block; padding: 4px 10px 20px 0;}
+.howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
 		.one {float:left; width: 46%; padding: 15px 10px;background:#a85705;}
 		.two {float:right; width: 46%; padding: 15px 10px;background:#a85705;}
@@ -452,7 +452,7 @@ h1 {font-size: 2.5em; color: #431f4c; margin-bottom: 10px; font-weight:normal;fo
 h2 {font-size: 2.4em;line-height:1em;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal;}
 h3 {font-size: 2.4em; color: #431f4c; line-height:18px; margin-bottom: 15px; font-weight:normal;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;}
 .step h3 {font-family:helvetica, arial, sans-serif; font-size:15px; font-weight: bold; margin: 13px 0 5px 0;}
-h4{font-size:1.6em;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal; text-transform:uppercase; padding: 10px 0;}
+h4{font-size:1.6em;font-family:"ltc-bodoni-175-1","ltc-bodoni-175-2", georgia, serif;font-weight:normal; text-transform:uppercase; padding:5px 0 20px 0;}
 p {font-size: 1.2em;line-height:1.4em;margin-bottom:20px;}
 p.saleEnding{color:#cc6600;margin-bottom:10px;}
 
