--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -239,7 +239,7 @@ ul#myAccount li ul li a:hover{
 
 
 /* HOW IT WORKS OVERLAY */
-.hiw-container {background: url(../images/bgs/black-diag.png) repeat; height:260px; width:100%; padding: 30px 0;}
+.hiw-container {background: url(../images/bgs/gray-diag.png) repeat; height:260px; width:100%; padding: 30px 0;}
 .howitworks {width:980px; color: #fff; margin: 0 auto; overflow: hidden;}
 .howitworks img {float:left; display: block; padding: 4px 14px 20px 5px;}
 	.hiw1-2 {float:left; width: 66%;}
