--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -24,47 +24,71 @@
  * @license     http://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
-<div id="messages_product_view"><?php echo $this->getMessagesBlock()->getGroupedHtml() ?></div>
 
-    <h1><?php echo Mage::helper('contacts')->__('Contact Us') ?></h1>
+<section id="contact-wrapper">
+	<section id="contact-text" class="left">
+		<h3>Rooja's Promise</h3>
+		<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.
+		</p>
+		
+		<h3>Shipping and Delivery</h3>
+		<p>
+			Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec.
+		</p>
+		
+		<a href="">Follow us on Twitter</a>
+		<a href="">Find us on Facebook</a>
+	</section>
+	<section id="contact-form" class="right">
+		<h3>Toll Free Phone</h3>
+		<p>+1 866 874 8327</p>
+		<h3>SMS</h3>
+		<p>+1 800 983 8247</p>
+		<h3>Email</h3>
+		<p>Questions, comments, concerns?</p>	
+		  <h1><?php echo Mage::helper('contacts')->__('Contact Us') ?></h1>
 
-<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
-    <div class="fieldset">
-       
-        <ul class="form-list">
-            <li class="fields">
-                <div class="field">
-                    <label for="name" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Name') ?></label>
-                    <div class="input-box">
-                        <input name="name" id="name" title="<?php echo Mage::helper('contacts')->__('Name') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserName()) ?>" class="input-text required-entry" type="text" />
-                    </div>
-                </div>
-                <div class="field">
-                    <label for="email" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Email') ?></label>
-                    <div class="input-box">
-                        <input name="email" id="email" title="<?php echo Mage::helper('contacts')->__('Email') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserEmail()) ?>" class="input-text required-entry validate-email" type="text" />
-                    </div>
-                </div>
-            </li>
-            <li>
-                <label for="telephone"><?php echo Mage::helper('contacts')->__('Telephone') ?></label>
-                <div class="input-box">
-                    <input name="telephone" id="telephone" title="<?php echo Mage::helper('contacts')->__('Telephone') ?>" value="" class="input-text" type="text" />
-                </div>
-            </li>
-            <li class="wide">
-                <label for="comment" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Comment') ?></label>
-                <div class="input-box">
-                    <textarea name="comment" id="comment" title="<?php echo Mage::helper('contacts')->__('Comment') ?>" class="required-entry input-text" cols="5" rows="3"></textarea>
-                </div>
-            </li>
-        </ul>
-    </div>
-  
-        <p class="required left">* Required Fields</p>
-		<div class="clear"></div>
-        <input type="text" name="hideit" id="hideit" value="" style="display:none !important;" />
-        <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" class="button"><span><span><?php echo Mage::helper('contacts')->__('Submit') ?></span></span></button>
+		<form action="<?php echo $this->getFormAction(); ?>" id="contactForm" method="post">
+		    <div class="fieldset">
+
+		        <ul class="form-list">
+		            <li class="fields">
+		                <div class="field">
+		                    <label for="name" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Name') ?></label>
+		                    <div class="input-box">
+		                        <input name="name" id="name" title="<?php echo Mage::helper('contacts')->__('Name') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserName()) ?>" class="input-text required-entry" type="text" />
+		                    </div>
+		                </div>
+		                <div class="field">
+		                    <label for="email" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Email') ?></label>
+		                    <div class="input-box">
+		                        <input name="email" id="email" title="<?php echo Mage::helper('contacts')->__('Email') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserEmail()) ?>" class="input-text required-entry validate-email" type="text" />
+		                    </div>
+		                </div>
+		            </li>
+		            <li>
+		                <label for="telephone"><?php echo Mage::helper('contacts')->__('Telephone') ?></label>
+		                <div class="input-box">
+		                    <input name="telephone" id="telephone" title="<?php echo Mage::helper('contacts')->__('Telephone') ?>" value="" class="input-text" type="text" />
+		                </div>
+		            </li>
+		            <li class="wide">
+		                <label for="comment" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Comment') ?></label>
+		                <div class="input-box">
+		                    <textarea name="comment" id="comment" title="<?php echo Mage::helper('contacts')->__('Comment') ?>" class="required-entry input-text" cols="5" rows="3"></textarea>
+		                </div>
+		            </li>
+		        </ul>
+		    </div>
+
+		        <p class="required left">* Required Fields</p>
+				<div class="clear"></div>
+		        <input type="text" name="hideit" id="hideit" value="" style="display:none !important;" />
+		        <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" class="button"><span><span><?php echo Mage::helper('contacts')->__('Submit') ?></span></span></button>
+		
+		
+	</section>
+	</section>
 
 </form>
 <script type="text/javascript">
