--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -224,14 +224,20 @@ ul#myAccount li ul li a:hover{
 
 /*************** CONTACT FORM */
 #contact-text, #contact-form {
-	width: 50%;
+	width: 45%;
 	background: #e0e0e0;
 	padding: 20px;
 }
 
+#contact-text h3, #contact-form h3 {
+	font-size: 1.5em; font-weight: bold;font-family:helvetica;
+}
+
+
 #contact-wrapper {
 	overflow: hidden;
 	width: 100%;
+	padding: 30px 0 0 0;
 }
 
 
