--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -232,6 +232,9 @@ ul#myAccount li ul li a:hover{
 #contact-text h3, #contact-form h3 {
 	font-size: 1.5em; font-weight: bold;font-family:helvetica;
 }
+#contact-form .form-list li.wide textarea {
+	width: 400px;
+}
 
 
 #contact-wrapper {
