contact page edits

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -243,6 +243,10 @@ ul#myAccount li ul li a:hover{
 	padding: 30px 0 0 0;
 }
 
+#contact-wrapper p {
+	font-size: 1.4em;
+}
+
 
 /* ~~~~~ FOOTER ~~~~~ */
 
