contact page styling

--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -101,4 +101,9 @@
 //<![CDATA[
     var contactForm = new VarienForm('contactForm', true);
 //]]>
+
+	//REDIRECTS PAGE TO A THANK YOU PAGE!
+		elem = $("contactForm"); 
+		elem.writeAttribute(’action’, ‘thankyou’); 
+
 </script>
