--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -58,14 +58,12 @@
 		            <li class="fields">
 			
 			<div class="contact-wrapper">
-		                <div class="field">
-		                    <label for="name" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Name') ?></label>
-		                    <div class="input-box">
+		                <div class="field"> 
+		                   <div class="input-box">
 		                        <input name="name" id="name" title="<?php echo Mage::helper('contacts')->__('Name') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserName()) ?>" class="input-text required-entry" type="text" />
 		                    </div>
 		                </div>
 		                <div class="field">
-		                    <label for="email" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Email') ?></label>
 		                    <div class="input-box">
 		                        <input name="email" id="email" title="<?php echo Mage::helper('contacts')->__('Email') ?>" value="<?php echo $this->htmlEscape($this->helper('contacts')->getUserEmail()) ?>" class="input-text required-entry validate-email" type="text" />
 		                    </div>
@@ -73,9 +71,9 @@
 		</div>
 		            </li>
 		            <li class="wide">
-		                <label for="comment" class="required"><em>*</em><?php echo Mage::helper('contacts')->__('Comment') ?></label>
+		                
 		                <div class="input-box">
-		                    <textarea name="comment" id="comment" title="<?php echo Mage::helper('contacts')->__('Comment') ?>" class="required-entry input-text" cols="5" rows="3"></textarea>
+		                    <textarea name="comment" id="comment" title="<?php echo Mage::helper('contacts')->__('Comment') ?>" class="required-entry input-text" cols="5" rows="3">Add comments here.</textarea>
 		                </div>
 		            </li>
 					<li>
@@ -86,8 +84,6 @@
 		            </li>
 		        </ul>
 		    </div>
-
-		        <p class="required left">* Required Fields</p>
 				<div class="clear"></div>
 		        <input type="text" name="hideit" id="hideit" value="" style="display:none !important;" />
 		        <button type="submit" title="<?php echo Mage::helper('contacts')->__('Submit') ?>" class="button"><span><span><?php echo Mage::helper('contacts')->__('Submit') ?></span></span></button>
