contact page styling

--- a/app/design/frontend/base/default/template/contacts/form.phtml
+++ b/app/design/frontend/base/default/template/contacts/form.phtml
@@ -77,9 +77,8 @@
 		                </div>
 		            </li>
 					<li>
-		                <label for="telephone"><?php echo Mage::helper('contacts')->__('Telephone') ?></label>
 		                <div class="input-box">
-		                    <input name="telephone" id="telephone" title="<?php echo Mage::helper('contacts')->__('Telephone') ?>" value="" class="input-text" type="text" />
+		                    <input name="telephone" id="telephone" title="<?php echo Mage::helper('contacts')->__('Telephone') ?>" value="Telephone Number" class="input-text" type="text" />
 		                </div>
 		            </li>
 		        </ul>
