contact page styling

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -227,7 +227,7 @@ ul#myAccount li ul li a:hover{
 	width: 45%;
 	background: #e0e0e0;
 	padding: 20px;
-	min-height:450px;
+	height:481px;
 }
 
 #contact-text h3, #contact-form h3 {
