--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -243,7 +243,7 @@ ul#myAccount li ul li a:hover{
 }
 
 #contact-wrapper button.button span, #continueShoppingBtn {
-	margin: 0 0 0 6px;
+	margin: 0 -5px;
 }
 
 #contact-form .form-list .field {
