contact page styling

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -222,6 +222,12 @@ ul#myAccount li ul li a:hover{
 }
 
 
+#sharePurchase h3{
+	font-size: 1.5em; font-weight: bold;font-family:helvetica; color: #333;
+}
+
+
+
 /*************** CONTACT FORM */
 #contact-text, #contact-form {
 	width: 45%;
