contact page styling

--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -223,7 +223,7 @@ ul#myAccount li ul li a:hover{
 
 
 #sharePurchase h3{
-	font-size: 1.5em; font-weight: bold;font-family:helvetica; color: #333;
+	font-size: 18px; font-weight: bold;font-family:helvetica; color: #333;
 }
 
 
