--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -225,6 +225,9 @@ ul#myAccount li ul li a:hover{
 #sharePurchase h3{
 	font-size: 18px; font-weight: bold;font-family:helvetica; color: #333;
 }
+#sharePurchase .fr .col1 .share-purchase {
+	width:350px;
+}
 
 
 
