checkout confirmation style

--- a/app/design/frontend/default/rooja/template/checkout/success.phtml
+++ b/app/design/frontend/default/rooja/template/checkout/success.phtml
@@ -49,7 +49,7 @@
 <button type="button" class="button" id="continueShoppingBtn" title="Return Home" onclick="window.location='/'">Return Home</button>
 </section>
 
-<section id="sharePurchase" class="fr col1 share-purchase">
+<section id="sharePurchase" class="right share-purchase">
 	<h3>Share Your Purchase!</h3>
 	<p>Let your friends know you scored some sweet loot on Rooja!  Encourage them to sign up and earn a $10 credit with every friend.</p>
 	<!-- AddThis Button BEGIN -->
