checkout confirmation style

--- a/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
+++ b/app/design/frontend/default/default/template/oneclickcartcheckout/checkout.phtml
@@ -40,7 +40,12 @@
 						<h3>Billing Address</h3>
                     <?=$this->getChildHtml("oneclickcartcheckout.billing")?> 
 
+                    <div id="shipping-info" style="display: none;"> 
                     <?php echo $this->getChildHtml("shipping2")?>    
+                    </div>
+                      <a  id="toggleShipping" onclick="toggleShipping()"><?=$this->__("Shipping address not the same as Billing address?")?></a>
+                      </li> 
+
                     </div>
 					</div>
                       </li> 
