change dropdown form to size boxes

--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -32,6 +32,8 @@
  */
 ?>
 
+<script type="text/javascript" src="/magento.visual.attribute.js"></script>
+
 <script type="text/javascript">
 jQuery(function() {
     jQuery("#attribute128").visualAttribute();
