--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -179,7 +179,7 @@ ul#myAccount li{
 		width: 150px;
 		margin:-10px -21px 0 16px;
 		height: 32px;
-		border:1px dotted white;
+		border-right:1px dotted white;
 		line-height: 18px;
 		
 	}
