--- a/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
+++ b/app/design/frontend/default/default/template/moo/catalog/product/view/media.phtml
@@ -52,7 +52,7 @@ if (count($galleryImages) > 0) {
         }
         $gallery .= '<li>'
                  .  '<a href="' . $this->helper('catalog/image')->init($this->getProduct(), 'image', $_image->getFile()) . '" '
-                 .  'rel="popupWin:\'' . $this->getGalleryUrl($_image) . '\', useZoom: \'cloudZoom\', smallImage: \'' . $this->getCloudImage($this->getProduct(), $_image) .  '\'" class="cloud-zoom-gallery" title="' . $this->htmlEscape($_image->getLabel()) . '">'
+                 .  'class="cloud-zoom-gallery" title="' . $this->htmlEscape($_image->getLabel()) . '">'
                  .  '<img src="' . $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56) . '" width="56" height="56" alt="' . $this->htmlEscape($_image->getLabel()) . '" />'
                  .  '</a></li>';
     }
@@ -61,7 +61,7 @@ if (count($galleryImages) > 0) {
 ?>
 
 <?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
-    <a rel="<?php echo $this->renderCloudOptions(); ?>" class="cloud-zoom" id="cloudZoom">
+    <a rel="<?php echo $this->renderCloudOptions(); ?>" href="<?php echo $this->helper('catalog/image')->init($_product, 'image'); ?>" class="cloud-zoom" id="cloudZoom">
     <?php
         $_img = '<img id="image" src="'.$this->getCloudImage($_product).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
         echo $_helper->productAttribute($_product, $_img, 'image');
