how it works first visit

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -54,8 +54,8 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         	
         <?php
 		
-		$Data =  Mage::getSingleton('core/session')->getYourVariable()
-		if(!isset($Data)){
+		$firstVisit =  Mage::getSingleton('core/session')->getYourVariable();
+		if(!isset($firstVisit)){
 		    Mage::getSingleton('core/session')->setYourVariable('visited');
 		}
 		else{ ?>
