how it works first visit

--- a/app/design/frontend/default/rooja/template/page/homepage.phtml
+++ b/app/design/frontend/default/rooja/template/page/homepage.phtml
@@ -55,6 +55,7 @@ if(!Mage::getSingleton('customer/session')->isLoggedIn() && ($agent !="facebooke
         <?php
 		
 		$firstVisit =  Mage::getSingleton('core/session')->getYourVariable();
+		echo $firstVisit;
 		if(!isset($firstVisit)){
 		    Mage::getSingleton('core/session')->setYourVariable('visited');
 		}
