--- a/skin/frontend/default/rooja/css/rooja.css
+++ b/skin/frontend/default/rooja/css/rooja.css
@@ -168,17 +168,17 @@ ul#myAccount li{
 }
 
 	ul#myAccount li.ignore-item {
-		background: url("../images/invite-friends.png") no-repeat left center;
+		background: url("../images/invite-friends.png") no-repeat 9px center;
 		height: 45px;
-		margin: -26px 19px 0 0;
-		padding: 14px 10px 10px 15px;
+		margin: -26px 23px 0 0;
+		padding: 14px 11px 10px 15px;
 	}
 	
 		ul#myAccount li.ignore-item:hover {
-			background: #220F26 url("../images/invite-friends.png") no-repeat left center;
+			background: #220F26 url("../images/invite-friends.png") no-repeat 9px center;
 			height: 45px;
-			margin: -26px 19px 0 0;
-			padding: 14px 10px 10px 15px;
+			margin: -26px 23px 0 0;
+			padding: 14px 11px 10px 15px;
 		}
 	
 	ul#myAccount li.ignore-item a{
