--- a/app/design/frontend/default/rooja/template/catalog/product/view.phtml
+++ b/app/design/frontend/default/rooja/template/catalog/product/view.phtml
@@ -165,7 +165,7 @@ if (!$categoryIds == null){
 					                 //var offset = -<?php echo $fbinc; ?>;
 					                 jQuery('#likeThis').find('span:last').text(function(i,txt) { return parseInt(txt, 10) + 1; });
 
-					                 jQuery('.currentPrice span').text(<?php echo number_format($fbprice - $fbinc, 2); ?>);
+					                 jQuery('.currentPrice').find('span:last').text(<?php echo number_format($fbprice - $fbinc, 2); ?>);
 									
 						             //alert('<?php echo '$' . number_format($fbprice, 2); ?>');
 					               },
